	
	* COPYING, all source files: GPLv3.

	* makeinfo/makeinfo.c,
	* info/info.c,
	* info/infokey.c,
	* util/install-info.c,
	* util/texindex.c: update --version output.

	* Makefile.am (EXTRA_DIST): remove config.rpath, it's in build-aux now.
	* lib/Makefile.am (libtxi_A_SOURCES): system.h at top level now.
	
	* makeinfo/tests/copying.txi: test with nonempty copying text.

2007-06-29  Karl Berry  <karl@gnu.org>

	* Version 4.9 (GPLv3, made from 4.8 branch).

2007-06-29  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (move_to_dest): do not cmp a directory.

2007-06-27  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (move_to_dest): do not copy a file onto itself,
	GNU cp complains.

2007-06-27  Oleg Katsitadze  <olegkat@gmail.com>

	* texinfo.tex (\setnonasciicharscatcodenonglobal): new macro.
	(\scanctxt):  in case of non-ASCII encodings, un-activate 8-bit
	chars to avoid their expansion.  Report from John Mandereau on
	bug-texinfo, Jun 22, 2007 at 05:26:09PM +0200.

2007-06-24  Karl Berry  <karl@gnu.org>

	* texinfo.tex (\internalpagesizes): must reset \pdfhorigin and
	\pdfvorigin after changing \pdfpageheight and \pdfpagewidth.

2007-06-20  Karl Berry  <karl@gnu.org>

	* texinfo.tex (\documentlanguagetrywithoutunderscore): new macro,
	to try txi-de.tex if @documentlanguage de_DE.
	(\documentlanguage): call it.

	* lang.c (default_country_for_lang): just return country code, not
	whole locale string.
	
	* makeinfo.h (output_head_p): new global.
	* makeinfo.c (info_output_head, output_head): new fns.
	(add_char): call it.  This is so we can translate the file header
	("produced by Makeinfo ...") in Info output as well as HTML.
	* html.c,
	* html.h, 
	* cmds.c: change usage of html_output_head_p to output_head_p, etc.

2007-06-17  Karl Berry  <karl@gnu.org>

	* makeinfo/lang.c (default_country_for_lang): implement using the
	same locales_with_principal_territory list as gettext's msginit.c.

	* makeinfo/lang.c (language_table): update from current list,