@@ -1,12 +1,12 @@
 /* files.c -- file-related functions for makeinfo.
-   $Id: files.c,v 1.6 2005-05-15 00:00:07 karl Exp $
+   $Id: files.c,v 1.7 2007-07-01 18:31:42 karl Exp $
 
-   Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003, 2004 Free Software
+   Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2007 Free Software
    Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2, or (at your option)
+   the Free Software Foundation; either version 3, or (at your option)
    any later version.
 
    This program is distributed in the hope that it will be useful,
@@ -656,7 +656,7 @@ register_delayed_write (char *delayed_command)
   /* We need the HTML header in the output,
      to get a proper output_position.  */
   if (!executing_string && html)
-    html_output_head ();
+    output_head ();
   /* Get output_position updated.  */
   flush_output ();
 
