@@ -1,11 +1,11 @@
 /* float.c -- float environment functions.
-   $Id: float.c,v 1.10 2007-01-26 00:03:56 karl Exp $
+   $Id: float.c,v 1.11 2007-07-01 18:31:42 karl Exp $
 
    Copyright (C) 2003, 2004, 2007 Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2, or (at your option)
+   the Free Software Foundation; either version 3, or (at your option)
    any later version.
 
    This program is distributed in the hope that it will be useful,
