@@ -1,11 +1,11 @@
 /* toc.c -- table of contents handling.
-   $Id: toc.c,v 1.8 2006-05-30 00:51:28 karl Exp $
+   $Id: toc.c,v 1.9 2007-07-01 18:31:44 karl Exp $
 
-   Copyright (C) 1999, 2000, 2001, 2002, 2003 Free Software Foundation, Inc.
+   Copyright (C) 1999, 2000, 2001, 2002, 2003, 2007 Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2, or (at your option)
+   the Free Software Foundation; either version 3, or (at your option)
    any later version.
 
    This program is distributed in the hope that it will be useful,
