@@ -1,12 +1,12 @@
 /* xml.h -- xml (including Docbook) output declarations.
-   $Id: xml.h,v 1.28 2007-06-20 20:05:42 karl Exp $
+   $Id: xml.h,v 1.29 2007-07-01 18:31:45 karl Exp $
 
    Copyright (C) 2001, 2002, 2003, 2004, 2005, 2007
    Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2, or (at your option)
+   the Free Software Foundation; either version 3, or (at your option)
    any later version.
 
    This program is distributed in the hope that it will be useful,
