@@ -1,11 +1,11 @@
 /* xref.c -- cross references for Texinfo.
-   $Id: xref.c,v 1.10 2006-05-30 00:51:28 karl Exp $
+   $Id: xref.c,v 1.11 2007-07-01 18:31:45 karl Exp $
 
-   Copyright (C) 2004, 2005 Free Software Foundation, Inc.
+   Copyright (C) 2004, 2005, 2007 Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2, or (at your option)
+   the Free Software Foundation; either version 3, or (at your option)
    any later version.
 
    This program is distributed in the hope that it will be useful,
